add reset to specifed size

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 		<title>Sketch</title>
 	</head>
 	<body>
+		<div class="input"><div>
+			<form name="input">
+				H:<input type="text" id="height">
+				W:<input type="text" id="width">
+				<input type="button" value="Reset" onclick="myReset()">
+			</form>
+		</div>
 		<div class="container">
 			<table>
 				<thead></thead>
