fixed bug, will properly add a td

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 				<input type="button" value="Reset" onclick="myReset()">
 			</form>
 		</div>
-		<div class="container">
+		<div>
 			<table>
 				<thead></thead>
-				<tbody></tbody>
+				<tbody class="container"></tbody>
 			</table>
 		</div>
 	</body>
