remomce extra <div>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Sketch</title>
 	</head>
 	<body>
-		<div class="input"><div>
+		<div class="input">
 			<form name="input">
 				H:<input type="text" id="height">
 				W:<input type="text" id="width">
